style: format java code according to Google Style Guide